kubernetes/apps/home-automation/dumbterm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dumbterm
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dumbterm
  template:
    metadata:
      labels:
        app: dumbterm
    spec:
      containers:
        - name: dumbterm
          image: ghcr.io/bokker/kube-webterm:0.0.5 # {"$imagepolicy": "home-automation:kube-webterm"}
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: unraid-storage
              mountPath: /root/.config
              subPath: kube-webterm/config
            - name: unraid-storage
              mountPath: /root/.kube
              subPath: kube-webterm/kube
      volumes:
        - name: unraid-storage
          persistentVolumeClaim:
            claimName: unraid-un-nvme-pvc
