kubernetes/apps/home-automation/dumbterm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: dumbterm-external
  annotations:
      external-dns.alpha.kubernetes.io/target: "external.deploy-on-friday.com"
spec:
  ingressClassName: external
  rules:
  - host: k9s.deploy-on-friday.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dumbterm
            port:
              number: 3000
